# study-app

./: .env.example  .gitignore  README.md  pyproject.toml
config/: exam_config.json  nanobot.config.example.json
data/content/: example-topic.md
deploy/nanobot/: HEARTBEAT.md
deploy/systemd/: exam-study-automation.service  exam-study-automation.timer  exam-study-daily.service  exam-study-daily.timer  exam-study-web.service  local-llm-glm-ocr.service  nanobot-study-gateway.service
docs/: architecture.md  telegram-pdf-ocr.md
scripts/: bootstrap.sh  generate_local_topics.py  run_automation.sh  run_daily_cycle.sh  run_nanobot.sh  run_web.sh
src/study_app/: automation.py  cli.py  content_document_validator.py  contracts.py  json_store.py  local_generator.py  markdown_loader.py  models.py  nanobot.py  notebooklm.py  pdf_ingest.py  practical_cases.py  scheduler.py  service.py  settings.py  source_normalizer.py  state.py  study_orchestrator.py  study_sqlite.py  study_store.py  targets.py  topic_splitter.py  web.py
src/study_app/static/: app.css
src/study_app/templates/: base.html  cards.html  dashboard.html  mock_exam.html  practicals.html  progress.html  quiz.html  session.html  topic_detail.html  topics.html
